# dev

./: .cookiecutter.json  .coveragerc  .gitignore  .isort.cfg  MANIFEST.in  README.md  setup.cfg  tox.ini
app/via_test_harness/: Makefile  README.md  app.py  requirements.txt
app/via_test_harness/conf/: config.json  secrets.json
app/via_test_harness/templates/: ui.html.jinja2
docs/: How do we lay out public and private modules in a Python package?.md
src/dev/: git_command.py
src/dev/models/: product.py
src/dev/resources/: libraries.json  packages.json  products.json
src/dev/templates/: dependency_graph.dot.jinja2
tests/unit/: test_sanity.py
