# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = dev
version = 1.0
description = This repo is a place to put developer tools (scripts for automating development tasks etc).
long_description = file: README.md
long_description_content_type = text/markdown

author = Hypothesis Engineering Team
author_email = eng@list.hypothes.is
maintainer = Hypothesis Engineering Team
maintainer_email = eng@list.hypothes.is
url = https://web.hypothes.is/

# From: https://pypi.org/pypi?:action=list_classifiers
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.6

project_urls=
    Source=https://github.com/hypothesis/dev
license=License :: OSI Approved :: BSD License
platforms=Operating System :: OS Independent

[options]
install_requires =
    packaging
    virtualenv
    requests
    jinja2
    diskcache
tests_require=
    pytest
    coverage

